--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 </div>
 
 <!-- partial -->
-  <script  src="Personal/mobile.js"></script>
+  <script  src="./mobile.js"></script>
 
 </body>
 </html>
