--- a/index.html
+++ b/index.html
@@ -56,7 +56,9 @@
 </div>
 
 <div class="paper">
-<p class="p1">Drag the papers hello to move!</p>
+<p class="p1">Drag the papers  to move!
+you will find the hidden message
+</p>
 </div>
 
 <!-- partial -->
