--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
 
 
 
-<div class="paper red">
-<p class="p1"> My little and Sweet</p>
+<div class="paper red ">
+<p class="p1  "> My little and Sweet</p>
 <p class="p2">Heart 😍</p>
 </div>
 
@@ -56,7 +56,8 @@
 </div>
 
 <div class="paper">
-<p class="p1">Drag the papers hello to move!</p>
+<p class="p1">Drag the papers to move!</p>
+<p> You will find Hidden Message</p>
 </div>
 
 <!-- partial -->
