--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 <div class="paper heart">
  
 </div>
-<div class="paper image">
-  <p> Will you be </p>
-    <p>Mine </p>
+<div class="paper p4">
+  <p class="p4 font"> Will you be </p>
+    <p class="font">Mine </p>
    </div>
   
 <div class="paper image">
