--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <!-- A pen by Developer Rahul  -->
 
 
-<audio controls autoplay loop>
+<audio controls autoplay loop hidden>
   <source src="images\Dandelions.mp3" type="audio/mp3">
 </audio>
 
@@ -61,7 +61,7 @@
 </div>
 
 <!-- partial -->
-  <script  src="./mobile.js"></script>
+  <script  src="./script.js"></script>
 
 </body>
 </html>
